--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,13 +3,23 @@
   "description": "Core package for typebox-extra",
   "license": "MIT",
   "version": "0.1.0",
-  "scripts": {},
+  "scripts": {
+    "build": "tsup"
+  },
   "peerDependencies": {
     "@sinclair/typebox": "^0.34.31"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
     "@sinclair/typebox": "^0.34.31",
+    "@typeb/tsconfig": "workspace:*",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.4",
+    "tsup": "^8.4.0",
     "typescript": "^5.8.2",
-    "tsup": "^8.4.0"
+    "typescript-eslint": "^8.27.0",
+    "vitest": "^3.0.9"
   }
 }
