--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,6 +7,6 @@
     "noImplicitAny": false,
     "resolveJsonModule": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "tsup.config.ts"],
   "exclude": ["node_modules", "dist"],
 }
