chore: add lint

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,9 @@
   },
   "scripts": {
     "build": "tsup",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "peerDependencies": {
     "@sinclair/typebox": "^0.34.31"
