--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,9 +3,20 @@
   "description": "Core package for typebox-extra",
   "license": "MIT",
   "version": "0.1.0",
-  "keywords": ["typebox", "typebox-extra", "typebox-i18n", "typebox custom messages"],
+  "author": "Michael Lazuardy",
+  "keywords": [
+    "typebox",
+    "typebox-extra",
+    "typebox-i18n",
+    "typebox custom messages"
+  ],
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "locales"
+  ],
   "sideEffects": false,
   "repository": {
     "type": "git",
@@ -17,6 +28,7 @@
   "scripts": {
     "build": "tsup",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -28,6 +40,7 @@
     "@eslint/js": "^9.23.0",
     "@sinclair/typebox": "^0.34.31",
     "@typeb/tsconfig": "workspace:*",
+    "@vitest/coverage-v8": "^3.1.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.4",
